# fastapi-prisma-template

./: .env  README.md  chainlit_app.py  main.py  pyproject.toml  start.py
.chainlit/: config.toml
app/home/: router.py  service.py
core/: app.py  config.py  logger.py  service.py  util.py
prisma/: schema.prisma
prisma/migrations/20250817205152_first/: migration.sql
